styles dark mode missexpelling fixed

--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -29,7 +29,7 @@
 
     .formulario {
         label,
-        legen,
+        legend,
         p {
             color: $gris;
         }
